--- a/index.html
+++ b/index.html
@@ -32,8 +32,23 @@
             <img src="images/banner.png" alt="">
         </div>
     </header>
+    <main>
+         <section class="team-container">
+            <div class="team-image-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
 
-    <main></main>
+
+            </div>
+            <div class="team-description">
+                <h3 class="team-description-title"><span class="Quick-list">Quick list</span> <span class="of-Our">of Our</span> <span class="Features">Features</span></h3>
+                <p class="team-description-contain">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+         </section>
+    </main>
     <footer></footer>
 
 </body>
