--- a/index.html
+++ b/index.html
@@ -48,7 +48,35 @@
                 <button class="btn-primary">Explore More</button>
             </div>
          </section>
-         <Section class="Features">
+         <Section class="Features-container">
+            <div class="features-contant">
+                <h3 class="features-title">Features you will love & enjoy</h3>
+                <p class="features--text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="card">
+                    <h3 class="card-tile">Dexktop & Mobile Version</h3>
+                    <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h3 class="card-tile">Drag & Drop Builder</h3>
+                    <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h3 class="card-tile">Awesome Modern Design</h3>
+                    <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h3 class="card-tile">Super Easy to Edit</h3>
+                    <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+
+            </div>
+            <div class="features-img">
+                <img src="images/architect.png" alt="">
+                <div class="ten-years">
+                    <h3 class="ten-years-title">10+ Years</h3>
+                    <p class="ten-years-Experience">Experience</p>
+                </div>
+            </div>
 
          </Section>
          <section class="facts">
